examples/type_system/failing/58_strict_public_underscore_missing_annotation.flx
// `_` prefix does not make a function private in strict mode.

public fn _foo(x) -> Int {
    x
}

fn main() -> Unit {
}
